Fixed nav blurring for webkit-based browsers

--- a/css/global.css
+++ b/css/global.css
@@ -218,6 +218,7 @@ body, html {
     padding: 15px;
     
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.5);
 }
 
@@ -260,6 +261,7 @@ body, html {
     
     z-index: 999;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.5);
     border-radius: 15px;
     
@@ -286,6 +288,7 @@ body, html {
 /* Full-Page Nav */
 .full-page-nav {
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.5);
     
     position: fixed;
